tests/init-exist-err.c
int i;
int *p = &j;
